mds: check if down mds is known

This avoids an assertion failure where an MDS receives an mdsmap that
causes it to enter up:replay and also see another MDS go down.

Fixes: http://tracker.ceph.com/issues/17670

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 99a21133cd3133088e3977d46aab7120524eb350)